# finetune-dk

./: README.md  Run.ipynb  config.py  evaluate.py  export_gguf.py  pre_finetune_test.py  pretestoutput.md  pyproject.toml  train.py  upload_model.py
endpoint/: Dockerfile  handler.py
