[project]
name = "qwen3-danish-finetune"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.43.0",
    "trl>=0.8.0",
    "peft>=0.10.0",
    "huggingface_hub>=0.21.0",
    "torch>=2.2.0",
    "torchvision",
    "openai>=1.0.0",
]
